--- a/page1.html
+++ b/page1.html
@@ -157,7 +157,7 @@
     <div id="output"></div>
     <!-- Success message container -->
     <div class="success-message" id="successMessage">
-        Successfully Verified your Registration!
+        Please fill the form to Verified your Registration!
     </div>
     <form action="">
         <div style="text-align: center;">
